adde new tests, made some changes